--- a/PresentMon/PresentMon.vcxproj
+++ b/PresentMon/PresentMon.vcxproj
@@ -38,7 +38,7 @@
     <ProjectGuid>{4EB9794B-1F12-48CE-ADC1-917E9810F29E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PresentMon</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Platform)'=='ARM'">10.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Platform)'=='ARM64'">10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -167,7 +167,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\build\obj\PresentData-$(Platform)-$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>dwmapi.lib;d3d11.lib;d2d1.lib;dwrite.lib;advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest />
   </ItemDefinitionGroup>
@@ -192,12 +192,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\build\obj\PresentData-$(Platform)-$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>windowsapp.lib;dwmapi.lib;d3d11.lib;d2d1.lib;dwrite.lib;advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest />
   </ItemDefinitionGroup>
@@ -231,7 +232,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\build\obj\PresentData-$(Platform)-$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>dwmapi.lib;d3d11.lib;d2d1.lib;dwrite.lib;advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest />
   </ItemDefinitionGroup>
@@ -262,6 +263,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -269,7 +271,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\build\obj\PresentData-$(Platform)-$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>windowsapp.lib;dwmapi.lib;d3d11.lib;d2d1.lib;dwrite.lib;advapi32.lib;shell32.lib;shlwapi.lib;tdh.lib;PresentData.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest />
   </ItemDefinitionGroup>
@@ -300,6 +302,8 @@
     <ClCompile Include="CsvOutput.cpp" />
     <ClCompile Include="LateStageReprojectionData.cpp" />
     <ClCompile Include="MainThread.cpp" />
+    <ClCompile Include="MLOutput.cpp" />
+    <ClCompile Include="MLOverlayThread.cpp" />
     <ClCompile Include="OutputThread.cpp" />
     <ClCompile Include="Privilege.cpp" />
     <ClCompile Include="TraceSession.cpp" />
@@ -307,6 +311,7 @@
   <ItemGroup>
     <ClInclude Include="..\build\obj\generated\version.h" />
     <ClInclude Include="LateStageReprojectionData.hpp" />
+    <ClInclude Include="MLOutput.hpp" />
     <ClInclude Include="PresentMon.hpp" />
   </ItemGroup>
   <ItemGroup>
